# projet_baby_name

./: README_streamlit.md  pyproject.toml  streamlit_app.py
projet/: requirements.txt
