[tool.poetry]
name = "projet-baby-name"
version = "0.1.0"
description = ""
authors = ["paul <mbathepaul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.46.1"
pandas = "^2.3.0"
numpy = "^2.3.1"
geopandas = "^1.1.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
plotly = "^6.2.0"
shapely = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
